@@ -68,17 +68,17 @@
     </distributionManagement>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <checker.framework.version>3.8.0</checker.framework.version>
-        <javac.version>9+181-r4173-1</javac.version>
-        <annotatedJdk>${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</annotatedJdk>
+        <checker.framework.version>3.11.0</checker.framework.version>
 
         <junit-minor.version>7.0</junit-minor.version>
         <junit.version>5.${junit-minor.version}</junit.version>
-        <mockito.version>3.6.0</mockito.version>
+        <mockito.version>3.8.0</mockito.version>
         <derive4j.version>1.1.1</derive4j.version>
+
+        <compiler-plugin.version>3.8.1</compiler-plugin.version>
     </properties>
 
     <build>
@@ -87,10 +87,9 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.7.0</version>
+                    <version>${compiler-plugin.version}</version>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
+                        <release>${java.version}</release>
 
                         <useIncrementalCompilation>false</useIncrementalCompilation>
 
@@ -107,8 +106,29 @@
         </pluginManagement>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.5.0</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.22.2</version>
 
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
@@ -124,7 +144,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.9</version>
+                <version>0.8.6</version>
                 <configuration>
                     <!-- Exclude code generated by derive4j -->
                     <excludes>
@@ -149,7 +169,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>test</id>
@@ -176,7 +196,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.7.0</version>
+                        <version>${compiler-plugin.version}</version>
 
                         <executions>
                             <execution>
@@ -227,7 +247,7 @@
                                     <fork>true</fork>
 
                                     <compilerArgs>
-                                        <arg>-J-Xbootclasspath/p:${annotatedJdk}</arg>
+                                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                         <arg>-Astubs=checkerframework/stubs</arg>
                                         <arg>-AstubWarnIfNotFound</arg>
                                     </compilerArgs>
@@ -247,13 +267,6 @@
                     </plugin>
                 </plugins>
             </build>
-            <dependencies>
-                <dependency>
-                    <groupId>com.google.errorprone</groupId>
-                    <artifactId>javac</artifactId>
-                    <version>${javac.version}</version>
-                </dependency>
-            </dependencies>
         </profile>
 
         <profile>
@@ -274,7 +287,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>3.2.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -287,7 +300,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.4</version>
+                        <version>3.2.0</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -349,7 +362,7 @@
         <dependency>
             <groupId>org.junit-pioneer</groupId>
             <artifactId>junit-pioneer</artifactId>
-            <version>1.0.0</version>
+            <version>1.3.8</version>
             <scope>test</scope>
         </dependency>
 
